Added feature of enroll now feature and getting users purchased courses

--- a/app/views/course/index.html.erb
+++ b/app/views/course/index.html.erb
@@ -32,6 +32,7 @@
             data-currency="inr">
           </script>
         <% end %>
+        <%= button_to "Enroll Now", enroll_course_path(course), method: :post, class: "btn btn-primary mt-2" %>
       </div>
 
       
