--- a/app/views/login/user_detail.html.erb
+++ b/app/views/login/user_detail.html.erb
@@ -5,87 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Detail</title>
 
-    <style>
-        body {
-            margin: 50px;
-            font-family: Arial, sans-serif;
-        }
-
-        .table-container {
-            display: flex;
-        }
-
-        .table-header {
-            width: 30%;
-            margin-right: 20px;
-        }
-
-        .table-body {
-            flex-grow: 1;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-        button{
-            background-color: blue;
-            width: 100px;
-            height: 30px;
-            font-size: 25px;
-            float: right;
-        }
-        
-    </style>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="bg-light">
 
-    <h2 style="text-align: center; font-size: 35px">User Detail</h2>
+    <div class="container mt-5">
+        <h2 class="text-center mb-4 text-info">User Detail</h2>
 
-    <div class="table-container">
-        <div class="table-header">
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID:</th>
-                    </tr>
-                    <tr>
-                        <th>Name:</th>
-                    </tr>
-                    <tr>
-                    <th>Email:</th>
-                    </tr>
-                </thead>
-            </table>
+        <div class="row">
+            <div class="col-md-4">
+                <table class="table table-bordered table-info">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>ID</th>
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                        </tr>
+                        <tr>
+                            <th>Email</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+
+            <div class="col-md-8">
+                <table class="table table-bordered table-success">
+                    <tbody>
+                        <tr>
+                            <td><%= @current_user["id"] %></td>
+                        </tr>
+                        <tr>
+                            <td><%= @current_user["name"] %></td>
+                        </tr>
+                        <tr>
+                            <td><%= @current_user["email"] %></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <!-- Enrolled Courses Section -->
+                <h4 class="text-info mt-4">Enrolled Courses</h4>
+                <ul class="list-group">
+                    <% @enrolled_courses.each do |course| %>
+                        <li class="list-group-item"><%= course.title %></li>
+                    <% end %>
+                </ul>
+            </div>
         </div>
 
-        <div class="table-body">
-            <table>
-                <tbody>
-                    <tr>
-                        <td><%= @current_user.id %></td>
-                    </tr>
-                    <tr>
-                        <td><%= @current_user.name %></td>
-                    </tr>
-                    <tr>
-                        <td><%= @current_user.email %></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="text-right mt-3">
+            <%= link_to 'Users list', '#', class: "btn btn-primary" %>
         </div>
-    </div><br>
+    </div>
 
-    <%= link_to 'Users list'%>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
