--- a/app/views/shared/_navbarinstructor.html.erb
+++ b/app/views/shared/_navbarinstructor.html.erb
@@ -16,7 +16,7 @@
           <a class="nav-link  login" href="/login">Log-in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  Courses" href="/courses">Courses</a>
+          <a class="nav-link  Courses" href="/course">Courses</a>
         </li>
         <li class="nav-item">
           <a class="nav-link  Courses" href="/newCourse">Upload Courses</a>
@@ -32,11 +32,24 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+
+      <li class="nav-item dropdown mb-4">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img src="assets/profile2.png" style="width: 30px; height: 30px; border-radius: 50%;">
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="/user_detail">Profile</a>
+        <a class="dropdown-item" href="#">Settings</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Logout</a>
+      </div>
+    </li>
     </div>
   </div>
 </nav>
