--- a/app/views/shared/_navbarstudent.html.erb
+++ b/app/views/shared/_navbarstudent.html.erb
@@ -1,8 +1,6 @@
-
-
-<nav class="navbar navbar-expand-lg navbar-light  navbar bg-info" style="height:70px">
+<nav class="navbar navbar-expand-lg navbar-light bg-info" style="height:70px">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="font-size: 30px">CodeHelp</a>
+    <a class="navbar-brand" href="#" style="font-size: 20px">CodeHelp</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,6 +18,7 @@
         <li class="nav-item">
           <a class="nav-link  Courses" href="/course">Courses</a>
         </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
@@ -30,7 +29,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li> 
+        </li>
         
       </ul>
       <form class="d-flex">
@@ -38,7 +37,17 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
 
-      
+      <li class="nav-item dropdown mb-4">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img src="assets/profile2.png" style="width: 30px; height: 30px; border-radius: 50%;">
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="/user_detail">Profile</a>
+        <a class="dropdown-item" href="#">Settings</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Logout</a>
+      </div>
+    </li>
     </div>
   </div>
 </nav>
