--- a/app/views/home/index2.html.erb
+++ b/app/views/home/index2.html.erb
@@ -24,21 +24,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img5.jpg" class="d-block w-100" alt="..." style= "height: 500px">
+      <img src="/assets/crousal_img1.jpg" class="d-block w-100" alt="..." style= "height: 500px">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img2.jpg" class="d-block w-100" alt="..." style= "height: 500px">
+      <img src="/assets/crousal_img2.png" class="d-block w-100" alt="..." style= "height: 500px">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img4.png" class="d-block w-100" alt="..." style= "height: 500px">
+      <img src="/assets/crousal_img3.jpg" class="d-block w-100" alt="..." style= "height: 500px">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
